Update team page

--- a/_data/activecontributors.yml
+++ b/_data/activecontributors.yml
@@ -28,7 +28,7 @@
     film projects.
 
 
-    Dorian lives in Montréal, Canada.
+    Dorian lives in Angoulême, France.
   links:
     - { type: blog, url: "http://www.fevrierdorian.com/blog/" }
     - { type: twitter, url: "https://twitter.com/NarannCG" }
