Add appleseed 1.7.0-beta release

--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -1,3 +1,17 @@
+- version: 1.7.0-beta
+  date: June 8th, 2017
+  github: "https://github.com/appleseedhq/appleseed/releases/tag/1.7.0-beta"
+  builds:
+    - platform: windows
+      label: Windows Vista<br>and Later
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.7.0-beta/appleseed-1.7.0-beta-0-g57b8da9-win64-vs140.zip"
+    - platform: osx
+      label: macOS 10.10<br>and Later
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.7.0-beta/appleseed-1.7.0-beta-0-g57b8da9-mac64-clang.zip"
+    - platform: linux
+      label: Linux
+      url: "https://github.com/appleseedhq/appleseed/releases/download/1.7.0-beta/appleseed-1.7.0-beta-0-g57b8da9-linux64-gcc48-py27.zip"
+
 - version: 1.6.0-beta
   date: December 17th, 2016
   github: "https://github.com/appleseedhq/appleseed/releases/tag/1.6.0-beta"
