Tweak render description

--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -23,7 +23,7 @@
   legend: "A scene from forum user @jarmaizsolt"
 
 - url: "/img/renders/materialtester-glass.png"
-  legend: "Our material tester scene, here made of glass"
+  legend: "Our old material tester scene, here made of glass"
 
 - url: "/img/renders/max-vl1.png"
   legend: "A scene from forum user @Max"
