--- a/_data/coreteam.yml
+++ b/_data/coreteam.yml
@@ -37,7 +37,7 @@
   role: Core Developer
   bio: >
     Luis is a freelance CG artist and shader writer with a background in fine arts and photography. He was
-    a developer of Shrimp, a RSL node-based shader authoring system. He has a kink for physically based
+    a developer of Shrimp, a RSL node-based shader authoring system. He has a kink for physically-based
     rendering, RSL, OSL and VEX shader writing.
 
 
