Add Johnathan Dent bio

--- a/_data/activecontributors.yml
+++ b/_data/activecontributors.yml
@@ -1,3 +1,17 @@
+- name: Jonathan Dent
+  picture: jonathan_dent.jpg
+  role: appleseed for Blender Core Developer
+  bio: >
+    Jon got his start coding on the RenderMan for Blender plugin and then wandered over to appleseed
+    because, as he puts it, he "liked the community ownership and spirit."
+
+
+    Jon has an AOS in Electronics and a BFA in Theater Arts (specializing in sound design and lighting).
+    He currently works in electronic components distribution. He is also the production manager for his
+    church and plays drums with a local band.
+
+
+    Jon lives in Thief River Falls, Minnesota.
 - name: François Gilliot
   picture: francois_gilliot.jpg
   role: Artistic Direction
