--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -1,3 +1,6 @@
+- url: "/img/renders/scifi-container.png"
+  legend: "Sci Fi Container by Juan Carlos Gutiérrez"
+
 - url: "/img/renders/toythingbig.png"
   legend: "Render by Twitter user @BigRetching, model by Artec 3D"
 
