--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -1,6 +1,9 @@
 - url: "/img/renders/scifi-container.png"
   legend: "Sci Fi Container by Juan Carlos Gutiérrez"
 
+- url: "/img/renders/head-scan.png"
+  legend: "Head Scan - Geometry, textures and environment map by [3D Scan Store](https://www.3dscanstore.com/index.php?route=information/information&information_id=16), scene reconstruction and skin shader by Juan Carlos Gutiérrez"
+
 - url: "/img/renders/toythingbig.png"
   legend: "Render by Twitter user @BigRetching, model by Artec 3D"
 
@@ -16,8 +19,8 @@
 - url: "/img/renders/perfume.jpg"
   legend: "[Perfumes scene by VizPeople](https://www.blog.viz-people.com/blog/free-3d-model-perfumes/), render by Herbert Crepaz"
 
-- url: "/img/renders/head-scan.png"
-  legend: "Head Scan - Geometry, textures and environment map by [3D Scan Store](https://www.3dscanstore.com/index.php?route=information/information&information_id=16), scene reconstruction and skin shader by Juan Carlos Gutiérrez"
+- url: "/img/renders/van.jpg"
+  legend: "Van by Jakub Vondra"
 
 - url: "/img/renders/galoot.png"
   legend: "Scene from forum user @ohsnapitsjoel"
