Update to Font Awesome v5.5.0

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,6 +26,6 @@
   area: about
   url: "/about.html"
 
-- label: <i class="fa fa-github"></i> GitHub
+- label: <i class="fab fa-github"></i> GitHub
   area: github
   url: "https://github.com/appleseedhq"
