Add "Rainy" render to gallery

--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -1,3 +1,6 @@
+- url: "/img/renders/rainy.png"
+  legend: "\"Rainy\" by Egert"
+
 - url: "/img/renders/scifi-container.png"
   legend: "Sci Fi Container by Juan Carlos Gutiérrez"
 
