Add credits for statue SSS render

--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -1,5 +1,5 @@
 - url: "/img/renders/sss-statue.png"
-  legend: "Statue with Random-Walk subsurface scattering and anisotropic Gabor noise, by Luis Barrancos"
+  legend: "[Statue of Nymph by TurboSquid user oliverlaric](https://www.turbosquid.com/FullPreview/Index.cfm/ID/942377) with Random-Walk subsurface scattering and anisotropic Gabor noise, by Luis Barrancos"
 
 - url: "/img/renders/rover.png"
   legend: "[NASA Curiosity Rover by RenderHub](https://www.renderhub.com/renderhub/nasa-curiosity-rover), render by Juan Carlos Gutiérrez"
