--- a/_data/coreteam.yml
+++ b/_data/coreteam.yml
@@ -8,7 +8,7 @@
     an early open source global illumination renderer released in 2003.
 
 
-    By day, François is Principal Software Engineer at [Launchmetrics](https://www.launchmetrics.com/).
+    By day, François is Lead Software Engineer at [Allegorithmic](https://www.allegorithmic.com/).
 
 
     François lives in Annecy, France.
@@ -25,6 +25,9 @@
     developer of the Ramen compositor first released in 2009. He started working on appleseed in 2012, doing
     general maintenance, Linux specific development, Python bindings and lately, adding support for Open Shading
     Language shaders.
+
+
+    Esteban is Senior Software engineer at [Allegorithmic](https://www.allegorithmic.com/) on the Substance Designer team.
 
 
     Esteban lives in Barcelona, Spain.
