Add link to François Gilliot's Instagram page

--- a/_data/activecontributors.yml
+++ b/_data/activecontributors.yml
@@ -28,6 +28,7 @@
     François lives in Annecy, France.
   links:
     - { type: blog, url: "http://loiseaunoir.blogspot.fr/" }
+    - { type: instagram, url: "https://www.instagram.com/pistols_99/" }
 
 
 - name: Dorian Fevrier
