Update team page

--- a/_data/coreteam.yml
+++ b/_data/coreteam.yml
@@ -30,7 +30,7 @@
     Esteban is Senior Software engineer at [Adobe](https://www.adobe.com/) on the Substance Designer team.
 
 
-    Esteban lives in Barcelona, Spain.
+    Esteban lives in Clermont-Ferrand, France.
   links:
     - { type: twitter, url: "https://twitter.com/EstTovagliari" }
     - { type: linkedin, url: "https://www.linkedin.com/in/esteban-tovagliari-223494186" }
@@ -54,7 +54,7 @@
   picture: kevin_masson.jpg
   role: Core Developer
   bio: >
-    Kevin contributed to appleseed for the first time as a Google Summer of Code student in 2018. He is 
+    Kevin contributed to appleseed for the first time as a Google Summer of Code student in 2018. He is
     a young developer with a strong interest in computer graphics.
 
 
