--- a/_data/activecontributors.yml
+++ b/_data/activecontributors.yml
@@ -3,7 +3,7 @@
   role: Integration Plugins Developer, Support
   bio: >
     Herbert is a Research Scientist from Austria. Having spent years taming quantum optics experiments in
-    Innsbruck, Barcelona, Oxford and Singapore he is currently a stay-at-home dad taking care of his daughter.
+    Innsbruck, Barcelona, Oxford and Singapore he currently works as a software developer for model based systems.
     He holds a PhD from ICFO, The Institute of Photonic Sciences, Barcelona, Spain.
 
 
