Small edits in profile info

--- a/_data/activecontributors.yml
+++ b/_data/activecontributors.yml
@@ -2,8 +2,8 @@
   picture: herbert_crepaz.jpg
   role: Integration Plugins Developer, Support
   bio: >
-    Herbert is a Research Scientist from Austria. Having spent years taming quantum optics experiments in
-    Innsbruck, Barcelona, Oxford and Singapore he currently works as a software developer for model based systems.
+    Herbert is a Research Scientist from Austria. After having spent years taming quantum optics experiments in
+    Innsbruck, Barcelona, Oxford and Singapore, he currently works as a software developer for model-based systems.
     He holds a PhD from ICFO, The Institute of Photonic Sciences, Barcelona, Spain.
 
 
