--- a/_data/stillimages.yml
+++ b/_data/stillimages.yml
@@ -8,7 +8,7 @@
   legend: "\"Rainy\" by Egert"
 
 - url: "/img/renders/scifi-container.png"
-  legend: "Sci Fi Container by Juan Carlos Gutiérrez"
+  legend: "\"Sci Fi Container\" by Juan Carlos Gutiérrez"
 
 - url: "/img/renders/head-scan.png"
   legend: "Head Scan - Geometry, textures and environment map by [3D Scan Store](https://www.3dscanstore.com/index.php?route=information/information&information_id=16), scene reconstruction and skin shader by Juan Carlos Gutiérrez"
@@ -17,7 +17,7 @@
   legend: "Render by Twitter user @BigRetching, model by Artec 3D"
 
 - url: "/img/renders/redpaperboat.jpg"
-  legend: "Red Paper Boat by [Giuseppe Lucido](https://zaldor.artstation.com/)"
+  legend: "\"Red Paper Boat\" by [Giuseppe Lucido](https://zaldor.artstation.com/)"
 
 - url: "/img/renders/jc-interior.png"
   legend: "Interior Scene by Juan Carlos Gutiérrez"
@@ -26,10 +26,13 @@
   legend: "Ajax bust by Torolf Sauermann (jotero), render by Juan Carlos Gutiérrez"
 
 - url: "/img/renders/white_kitchen.jpg"
-  legend: "White Kitchen by Juan Carlos Gutiérrez"
+  legend: "\"White Kitchen\" by Juan Carlos Gutiérrez"
 
 - url: "/img/renders/perfume.jpg"
   legend: "[Perfumes scene by VizPeople](https://www.blog.viz-people.com/blog/free-3d-model-perfumes/), render by Herbert Crepaz"
+
+- url: "/img/renders/pen-booklet.png"
+  legend: "\"Pen & Booklet\" by Herbert Crepaz - Booklet model from VizPeople, [pen model from GrabCad](https://grabcad.com/library/254483)"
 
 - url: "/img/renders/van.jpg"
   legend: "Van by Jakub Vondra"
@@ -44,7 +47,7 @@
   legend: "Cleverly named jar of candies"
 
 - url: "/img/renders/jc-whiskey-glasses.jpg"
-  legend: "Whiskey Glasses by Juan Carlos Gutiérrez"
+  legend: "\"Whiskey Glasses\" by Juan Carlos Gutiérrez"
 
 - url: "/img/renders/cornellbox-water.png"
   legend: "Cornell Box filled with water - Rendered with Stochastic Progressive Photon Mapping (SPPM)"
@@ -86,7 +89,7 @@
   legend: "Mosaic of materials achieved with appleseed Standard Surface material"
 
 - url: "/img/renders/rolling-teapot.jpg"
-  legend: "Rolling Teapot - Model by Brice Laville, concept by Tom Robinson, render by Esteban Tovagliari - [RenderMan 'Rolling Teapot' Art Challenge](https://renderman.pixar.com/news/renderman-rolling-teapot-art-challenge)"
+  legend: "\"Rolling Teapot\" - Model by Brice Laville, concept by Tom Robinson, render by Esteban Tovagliari - [RenderMan 'Rolling Teapot' Art Challenge](https://renderman.pixar.com/news/renderman-rolling-teapot-art-challenge)"
 
 - url: "/img/renders/npr1.png"
   legend: "Toon shading with model from Blend Swap user ozzlennon (CC BY)"
